Break chrome_initial's dependence on //components/startup_metric_utils/browser:lib

We can't have chrome.exe depending on browser code since doing so can
unexpectedly cause the size of chrome.exe to bloat. This change
accomplishes the breakage by passing the main exe entry TimeTicks
through to chrome.dll directly by way of ChromeMain and
ChromeMainDelegate rather than via an environment variable.

BUG=647223
R=brucedawson@chromium.org

Review-Url: https://codereview.chromium.org/2345933002
Cr-Commit-Position: refs/heads/master@{#419881}

Former-commit-id: a237cc46f9274d80df60813c10b69ec3067d7c2c